saving process json file and new text

--- a/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
+++ b/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
@@ -45,7 +45,7 @@
 
 	\section*{Introduction}
 
-	The Arab Uprising of 2010-13 was an exceedingly complex phenomenon.  The initial event – the self-immolation of Mohamed Bouazizi in Sidi Bouzid, Tunisia – triggered a chain of events marked by interaction and feedback loops.  During the Uprising, experts predicted a particular unfolding or winding down of the phenomenon, and often were wrong.  Some assured their readers that the Tunisian unrest of December 2010 and January 2011 would not spread to other Arab countries (Karon 2011; Walt 2011); others predicted that the unrest that did spread to Libya, Egypt, Yemen, Syria, and elsewhere would bring liberal democracy to those countries (Obama 2011, Jupp\'{e} 2011).  In other words, two of the unpredictable developments were the spread of unrest across countries and the evident shift in the goals of rebels.  
+	The Arab Uprising of 2010-13 was a phenomenon characterized by repeated interactions between competing ideological groups.  The initial event – the self-immolation of Mohamed Bouazizi in Sidi Bouzid, Tunisia – triggered a chain of events marked by interaction and feedback loops.  During the Uprising, experts predicted a particular unfolding or winding down of the phenomenon, and often were wrong.  Some assured their readers that the Tunisian unrest of December 2010 and January 2011 would not spread to other Arab countries (Karon 2011; Walt 2011); others predicted that the unrest that did spread to Libya, Egypt, Yemen, Syria, and elsewhere would bring liberal democracy to those countries (Obama 2011, Jupp\'{e} 2011).  In other words, two of the unpredictable developments were the spread of unrest across countries and the evident shift in the goals of rebels.  
 A helpful approach to explaining, if not predicting, the progress of the Arab Uprising and infectious political unrest more generally is via group polarization, or the endogenous segregation of a population by preferences into two or more mutually antagonistic groups.  
 
 Group polarization is situational and hence may be short-lived; it is different from the long-term, materially based social polarization that many social scientists study (Moulaert et al. 2003).  Group polarization is a way to conceive of how identities and preferences change in response to exogenous events such as a public demonstration or a coup d'\'{e}tat.  A stylized version runs as follows:  At time $t$, an unmodeled event takes place (e.g., Bouazizi's self-immolation); at $t+1$, the news spreads; at $t+2$, a portion of the population of Sidi Bouzid becomes angry and identifies more strongly against the local and national government, as reflected in anti-government speech and action; at $t+3$, news of that speech and action spreads; at $t+4$, a portion of Sidi Bouzid's population becomes angry at the protesters and identifies more strongly with the government, as reflected in pro-government speech and action; at $t+5$, news of that speech and action spread within Tunisia and beyond; and so on.  Group polarization is self-reinforcing.  It may be slowed, halted, or reversed by various developments, including coercion (censorship, physical force) by governments.
@@ -54,19 +54,21 @@ Its situational quality, specifically its dependence on exogenous events, makes 
 
 Group polarization is a phenomenon of changing sentiment, identity, and preference.  Measuring it with rigor has been difficult, and thus so has testing claims about what triggers it and what suppresses it.  The growing use of social media, the availability of the resulting data, and advances in computing power, however, combine to allow researchers to measure changes in group polarization over time.  In this paper, we present analysis of Twitter data during 2013 in Egypt and Tunisia.  We choose this time period because Egypt went through a number of political events that seem prime candidates for triggers of group polarization.  Most obvious is the July 3 coup d'état in which secularist military officers overthrew the elected government of Mohamed Morsi of the Muslim Brotherhood.  Other potentially polarizing events include clashes between Muslims and Christians in al-Khousos on April 6-7; Morsi's appointment of seven new governors from the Muslim Brotherhood on June 16; and the military government's violent dispersal of pro-Morsi demonstrators in Cairo on August 14 (Daily News Egypt, https://dailynewsegypt.com/2013/08/14/live-updates-pro-morsi-sit-ins-dispersed/, retrieved on 11 August 2017.) 
 
-This paper presents a Bayesian item response theory model that incorporates feedback loops between ideological groups through the use of co-integrated time-series priors on latent constructs. The item response theory model has been widely used to study social and group polarization, but we are the first to show how to explicitly model feedback by proposing that similar cross-country ideological groups will tend to show auto-correlated trends over time. In other words, we expect that the differences between the ideological positions of secularists in Egypt and secularists in Tunisia will be roughly proportional (i.e., stationary) over time, while the same condition will hold for Islamists in both countries. 
+This paper presents a Bayesian item response theory model that incorporates feedback loops between ideological groups through the use of co-integrated time-series priors on latent variables that represent the ideological positions. The item response theory model has been widely used to study social and group polarization, but we are the first to show how to explicitly model feedback by proposing that similar cross-country ideological groups will tend to show auto-correlated trends over time. In other words, we expect that the differences between the ideological positions of secularists in Egypt and secularists in Tunisia will be roughly proportional (i.e., stationary) over time, while the same condition will hold for Islamists in both countries. Based on this assumption, we can then model the divergence between these groups as a function of both within-country and between-country polarization.
 
 In what follows, we explicate the logic of group polarization in an informal model.  We include propositions about de-polarization and cross-polarization.  We offer hypotheses about group polarization, and explain and defend our use of tweets in Egypt and Tunisia in 2013.  We present the statistical model and data analysis.  We close with thoughts for future research.
 
 
 \section*{Group Polarization: An Informal Model}
-Polarization has been studied extensively by social scientists.  Much of that work concerns social polarization, or segregation into groups that are stable over long periods of time (such as ``Red America" and ``Blue America").   By group polarization, we mean a process of segregation – not an equilibrium – that is relatively short-term or situational yet may be politically consequential.   Along with other scholars, we define polarization as a social construct, namely as progressive identity change that entails preference change.   When two actors polarize, at time $t$, both actors may prefer a 50-50 allocation of goods; at $t+1$, each may prefer a 60-40 allocation in its favor; at $t+2$, a 75-25 allocation; and so on.  At the limit of polarization, each side wishes the other destroyed.   Group polarization, then, is one way to formulate a progressive worsening of conflict; it does not cause conflict, in the sense of an independent variable causing a dependent one.  Rather, polarization is conflict that is self-intensifying.  Group polarization is endogenous, not in the sense that it is unrelated to pre-existing cleavages bur rather in the sense that, once triggered by exogenous events, it is self-intensifying.   It entails the altering of individuals' preferences and practices and creates new threats and opportunities for various actors, including actual and aspiring rulers (Owen 2015: 55-61)..  
+Polarization has been studied extensively by social scientists.  Much of that work concerns social polarization, or segregation into groups that are stable over long periods of time (such as ``Red America" and ``Blue America").   By group polarization, we mean a process of segregation – not an equilibrium – that is relatively short-term or situational yet may be politically consequential.   Along with other scholars, we define polarization as a social construct, namely as progressive identity change that entails preference change.   When two actors polarize, at time $t$, both actors may prefer a 50-50 allocation of goods; at $t+1$, each may prefer a 60-40 allocation in its favor; at $t+2$, a 75-25 allocation; and so on.  At the limit of polarization, each side wishes the other destroyed.   
+
+Group polarization, then, is one way to formulate a progressive worsening of conflict; it does not cause conflict, in the sense of an independent variable causing a dependent one.  Rather, polarization is conflict that is self-intensifying.  Group polarization is endogenous, not in the sense that it is unrelated to pre-existing cleavages bur rather in the sense that, once triggered by exogenous events, it is self-intensifying.   It entails the altering of individuals' preferences and practices and creates new threats and opportunities for various actors, including actual and aspiring rulers (Owen 2015: 55-61)..  
 
 Stated informally, the basic group polarization model is simple.  Assume a population of 100 persons, all 100 belonging to one half or another of $x$ pairs of opposing social groups (labor or capital, democrats or authoritarians, Islamists or secularists, urban or rural, etc., etc.).  Fifty are pro-democracy, fifty pro-authoritarian.  These groups do not correlate significantly to any other groups; e.g., democrats are as likely to be Islamist as secularist.  The population thus has cross-cutting cleavages.   At time $t$, the population begins in an unbiased equilibrium, such that, although individuals may identify more strongly with one group affiliation than with others, in the population as a whole, no identity axis predominates; hence social interaction does not skew the distribution of resources, including information, to any of the social groups (Dunning and Harrison 2010).  Now suppose that at $t+1$ three democrats – one Islamist and two secularist, and two urban and one rural – publicly beat an authoritarian.  Assuming a relatively free flow of information, that event can trigger the polarization of the population along a democratic-authoritarian ideological axis, such that democrats and authoritarians care less and less about class, being urban or rural, or mosque-state questions and more and more about ideology.  If not disrupted, polarization by definition culminates in inter-group violence.
 
 Transnational group polarization takes place when polarization spans two or more countries at once.  Citizenship in a state amounts to yet another group affiliation, albeit normally an especially politically salient one that carries the advantages of a state apparatus.  States are set up to foster group identity and loyalty vis-à-vis foreigners.  They may use physical segregation, closed or semi-closed national borders, national economic integration, propaganda, history, threats of war, coercion, and other means to induce a strong national identity among citizens and hence a strong sense that foreigners are an ``other."  Yet, interaction – communication, trade, investment, travel – across state borders is normal, particularly among most countries in the twenty-first century.   States vary in their capacity to build and maintain a national identity and to have that identity perpetually trump all other group affiliations, including transnational ones, across all conditions.   Thus transnational group affiliations – ethnic, religious, ideological, class, sexual – are part of life for people in most countries.  Insofar as communication across state boundaries is uncensored by states, transnational group affiliations can yield transnational group polarization.  The informal model above may then incorporate democrats and authoritarians in a second state (and a third, a fourth, and so on).
 
-Cross-polarization takes place when a group at time $t-1$ is not in unbiased equilibrium, but instead is polarized along one identity axis and at t an event triggers polarization along a different axis.  In the example above, at t the population is segregated according to preference into Islamists and secularists.  At $t+1$, three authoritarians (say, one Islamist and two secularist) publicly beat a democrat.  At $t+2$, as Islamists and secularists who are democrats begin to identify more as democrats and less as Islamists or secularists.  Polarization of the entire population along a democrat-authoritarian axis will commence.
+Cross-polarization takes place when a group at time $t-1$ is not in unbiased equilibrium, but instead is polarized along one identity axis and at $t$ an event triggers polarization along a different axis.  In the example above, at $t$ the population is segregated according to preference into Islamists and secularists.  At $t+1$, three authoritarians (say, one Islamist and two secularist) publicly beat a democrat.  At $t+2$, as Islamists and secularists who are democrats begin to identify more as democrats and less as Islamists or secularists.  Polarization of the entire population along a democrat-authoritarian axis will commence.
 
 Group de-polarization – understood as a diminution of speech and acts biased according to group affiliation – may set in when communication is censored or degraded or speech and action forcibly curtailed.  The most obvious agent of de-polarization is a government, which typically has at least some of the means of censorship and coercion at its disposal.  A government threatened by polarization into pro- and anti-government groups can be expected to try to slow, halt, or reverse it – or to trigger a cross-polarization that would weaken the anti-government group.  
 
@@ -113,15 +115,33 @@ The primary event we are most interested in is the coup that overthrew President
 \section*{Data Collection}
 Analyzing these phenomena quantitatively is difficult because we need good measures of ideology across countries that also varies over time. The advent of social media during the Arab Uprisings provides some of the first available data that we can use to examine the predictions of the theory. We chose to use Twitter due to its public nature and the ability to closely track elite users, or those users with a large number of followers. We built a sample of Egyptian and Tunisian twitter users that are broadly representative of political thinking \& discourse within these countries.
 
-To obtain the sample, we started with a universe of tweets from the early stage of the Arab Spring, December 2010 to April 1st, 2011 that all matched the search times ``Cairo", ``Alexandria" and ``Tunis" in the location field in Twitter.  This dataset of 11 million tweets was then parsed in order to identify users that had received the largest number of retweets and mentions during that time period. We curated the resulting list of elite users, both by removing accounts that were later abandoned and by adding ideological diversity. In general, Twitter in 2011 was dominated by well-educated secular elites with a flair for democracy, while Islamists and pro-regime figures were later to adopt Twitter as a medium. For example, in Egypt we added the account for Mohammed Morsi, the Islamist president affiliated with the Muslim Brotherhood, and in Tunisia we added Rached Ghannouchi, long considered to be the guiding force of the Islamist Nahda movement in Tunisia. The full list of users selected for analysis is available in the appendix.
+To obtain the sample, we started with a universe of tweets from the early stage of the Arab Spring, December 2010 to April 1st, 2011 that all matched the search keywords ``Cairo", ``Alexandria" and ``Tunis" in the user self-reported location field in Twitter.  This dataset of 11 million tweets was then parsed in order to identify users that had received the largest number of retweets and mentions during that time period. We curated the resulting list of elite users, both by removing accounts that were later abandoned and by adding ideological diversity. In general, Twitter in 2011 was dominated by well-educated secular elites with a flair for democracy, while Islamists and pro-regime figures were later to adopt Twitter as a medium. For example, in Egypt we added the account for Mohammed Morsi, the Islamist president affiliated with the Muslim Brotherhood, and in Tunisia we added Rached Ghannouchi, long considered to be the guiding force of the Islamist Nahda movement in Tunisia. The full list of users selected for analysis is available in the appendix.
 
-The final sample amounted to 142 Twitter users, 50 from Tunisia and 92 from Egypt. The larger number from Egypt reflects the much larger Twitter-sphere in the country and hence the need to obtain a broader sample of users. We then had two graduate assistants code the user list along two axes: Islamist-Secularist and Pro/Anti Democracy. We found both Islamists and secularists who were pro and anti-democracy, which we diagnosed by whether the elite was willing to oppose their own ideological allies when democratic norms were threatened by their own group, such as secularists opposing the coup that overthrew Mohammed Morsi. For that reason, these cleavages can be considered distinct, although in general we found it harder to identify pro and anti-democratic views because of the strong normative bias against expressing pro-authoritarian discourse. 
+The final sample amounted to 155 Twitter users, 58 from Tunisia and 95 from Egypt. The larger number from Egypt reflects the much larger Twitter-sphere in the country and hence the need to obtain a broader sample of users. We then had two graduate assistants code the user list along two axes: Islamist-Secularist and Pro/Anti Democracy. We found both Islamists and secularists who were pro and anti-democracy, which we diagnosed by whether the elite was willing to oppose their own ideological allies when democratic norms were threatened by their own group, such as secularists opposing the coup that overthrew Mohammed Morsi. For that reason, these cleavages can be considered distinct, although in general we found it harder to identify pro and anti-democratic views because of the strong normative bias against expressing pro-authoritarian discourse. 
+\begin{table}
+	\centering
+
+	
+	\begin{tabular}{l|cc}
+		& Democracy Coding & Religion Coding \\
+		\midrule
+		Percent Agreement & 38.9\% (83) & 61\% (130) \\
+		Percent Disagreement & 72\% (77) & 28\% (30) \\
+	\end{tabular}
+
+\begin{scriptsize}
+	Note: Rows sum to one.
+\end{scriptsize}
+	\caption{Coding Agreement for Anti/Pro Democratic and Islamist-Secularist Twitter Users}\label{coding}
+\end{table}
+
+Table \ref{coding} shows the tendency for the coders to agree much more on the Islamist-secularist coding than on the pro/anti democracy coding. While the coders did not agree on 77 of the users, or roughly half, for the pro/anti democracy cleavage, they only disagreed on 30 of the Islamist/secularist cleavage codings. Furthermore, several of the remaining disagreements were easy to resolve by addressing accidental coding mistakes. For users for which there did not appear to be very clear evidence, we defaulted to secularism given that the majority of the users tended to be secular.
 
 We focus on the Islamist-secularist distinction in this paper because there are more observable indicators for this cleavage during the time period in question, such as tweets supporting or opposing the Muslim Brotherhood, in addition to the fact that adding an explicit second dimension would make the ensuing model far more complicated, although we return to this issue in the discussion. In addition to these binary classifications, we also had the graduate coders record their confidence in their assessment on a scale of 0 to 100. We further reviewed cases that had an uncertainty of less than 50 percent. In general, these users did not tweet as much on political topics and their ideology is relatively unknown. We excluded these users for the analyses we report here as their lack of ideological content makes them uninteresting to this analysis.
 
-With this finished list of 142 elite users, we then collected their full tweet histories from March 31st, 2013 to December 31st, 2013. This 1.7 million list of tweets was then filtered down to 1.2 million tweets that constitute each user's own composed tweets by removing all of each user's retweets. Using Twitter's open API, the retweets of all of these 1.2 million original tweets was then downloaded as a list of user IDs for each user per day for a total of 275 days. The use of the open API represents a limitation in the data collection because only 100 re-tweets of a given retweet may be downloaded; however, this limit was rarely reached in practice because very few of the tweets in question had more than 100 retweets. Even ex-President Mohammed Morsi, who has more than a million twitter followers, averaged only a few hundred re-tweets per tweet during 2013. Nonetheless, this data must still be understood as a sample of the full number of retweets, especially for users with a very large popular following.
+With this finished list of 155 elite users, we then collected their full tweet histories from March 31st, 2013 to December 31st, 2013. This 1.7 million list of tweets was then filtered down to 1.2 million tweets that constitute each user's own composed tweets by removing all of each user's retweets. Using Twitter's open API, the retweets of all of these 1.2 million original tweets was then downloaded as a list of user IDs for each user per day for a total of 275 days. The use of the open API represents a limitation in the data collection because only 100 re-tweets of a given retweet may be downloaded; however, this limit was rarely reached in practice because very few of the tweets in question had more than 100 retweets. Even ex-President Mohammed Morsi, who has more than a million twitter followers, averaged only a few hundred re-tweets per tweet during 2013. Nonetheless, this data must still be understood as a sample of the full number of retweets, especially for users with a very large popular following.
 
-The final database comprises a set of elites $j$ and citizens $i$ in which the outcome is the number of times that $i$ retweeted $j$ for each three-day in the sample. Three-day periods were chosen because it helps to address weekend seasonality (any particular period could fall on any part of the week), and because it results in a reasonable 92 time points in our sample. We took these retweets and we calculated how many times a specific user/citizen retweeted each elite within the three-day window. We then appended this data together for all the elites in our sample, comprising a dataset of 396,256 citizen-elite pairs.\footnote{We also had to sample 500 tweets from the Egyptian collection for each period in our sample due to the massive size of the remaining tweets and lengthy processing times.} We removed all citizens who did not re-tweet at least three different elites during the entire time period, resulting in a final dataset of 180,321 citizen-elite pairs with a total of 18,107 unique citizen Twitter users, or an average of 10 retweets per user. We do not include zeroes in the dataset for periods when a user did not re-tweet an elite because we do not know if a user saw a tweet and chose not to re-tweet or whether they never saw the tweet in question. For that reason, we would prefer to include only observed data in the model, while making the assumption that users would be equally likely to re-tweet similar ideological elites conditional on the users seeing these tweets.
+The final database comprises a set of elites $j$ and citizens $i$ in which the outcome is the number of times that $i$ retweeted $j$ for each three-day in the sample. Three-day periods were chosen because it helps to address weekend seasonality (any particular period could fall on any part of the week), and because it results in a reasonable 92 time points in our sample. We took these retweets and we calculated how many times a specific user/citizen retweeted each elite within the three-day window. We then appended this data together for all the elites in our sample. We removed all citizens who did not re-tweet at least three different elites during the entire time period, resulting in a final dataset of 1,835,824 citizen-elite interactions with a total of 96,848 unique citizen Twitter users, or an average of 43 retweets per user of elites during the sample period. We do not include zeroes in the dataset for periods when a user did not re-tweet an elite because we do not know if a user saw a tweet and chose not to re-tweet or whether they never saw the tweet in question. For that reason, we would prefer to include only observed data in the model, while making the assumption that users would be equally likely to re-tweet similar ideological elites conditional on the users seeing these tweets.
 
 The set of elites is further divided into four groups based on the RA coding: Islamists in Egypt and Tunisia versus secularists in Egypt and Tunisia. We can then think of each group having an average position in an ideological ideal point space that varies over the number of days in the sample. We do not account for the pro- and anti-democracy axis, so for that reason these estimates implicitly average over this cleavage within ideological groups.
 
